# Lorem-Ipsum-01

./: .env.example  .gitignore  DOCKER_README.md  README.md  docker-compose.yml  nginx.conf  pitch.txt  pyproject.toml
backend/: .dockerignore  Dockerfile  agent_ai.py  analytics.py  generate_synthetic_threads.py  main.py  rag.py  rag_tools.py  settings.py  try_agent.py  try_app.py  try_chat.py  try_continue.py  try_dashboard.py  try_dashboard_api.py  try_session.py
backend/database/: address.py  locate.py  qdrant.py
backend/maps/: address.py  locate.py  place.py
backend/thread_analytics/: 0efdc7ab-eb37-43c2-a81b-e25a4a2b969e.json  2bf6bd78-f82b-4106-8744-1517b17b200d.json  866088b4-99bf-453a-af39-6e57f3f6920d.json
backend/thread_data/: 0efdc7ab-eb37-43c2-a81b-e25a4a2b969e.json  2bf6bd78-f82b-4106-8744-1517b17b200d.json  b2d82e69-19ea-4037-a18c-85b048a8f468.json
backend/thread_memory/: 0efdc7ab-eb37-43c2-a81b-e25a4a2b969e.json  2bf6bd78-f82b-4106-8744-1517b17b200d.json  866088b4-99bf-453a-af39-6e57f3f6920d.json  ac1894d4-04ff-42fd-87c1-8851113ceb2a.json  (+2 more)
data/: fix_prices.py  get_caloric_data.py  lidl_parsed_turbo.json  lidl_parser.py  lidl_parser_turbo.py  qdrant_insert.py  settings.py  tesco_parsed_turbo.json  tesco_parser.py  tesco_parser_turbo.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  (+2 more)
scraping/: README.md  main.py  pyproject.toml  sample.json  translate_and_dedupe.py
tests/: conftest.py  test_agent_tool_usage.py  test_dashboard_analytics.py  test_extract_tool_usage.py  test_places_integration.py
(+33 files in other folders)
