[project]
name = "lorem-ipsum-01"
version = "0.1.0"
description = "I am hungry"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "openai>=2.8.1",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.1",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
