[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lorem-ipsum-01"
version = "0.1.0"
description = "I am hungry"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "openai>=2.8.1",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.1",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "pytest>=9.0.1",
    "pydantic-ai>=1.25.1",
]

[tool.pytest.ini_options]
markers = ["integration: tests that call external services or live APIs"]
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(name)s: %(message)s"
log_date_format = "%H:%M:%S"
